Fixed #1 - Aggiugnto terzo pacco di slide, mancano le slide da pag 35 a 41 e inoltre non ho capito bene i grafici quindi non gli ho spiegati nel pdf, ho segnato le parti in cui non ho capito (testo sottolineato e in corsivo)

--- a/appunti_eleganti/Appunti.tex
+++ b/appunti_eleganti/Appunti.tex
@@ -103,4 +103,145 @@
 	
 	Come abbiamo detto in precedenza le rappresentazioni differiscono (sono soggettive) e quindi 2 differenti mental rappresentation della stessa cosa possono esse \textit{mutualmente inconsistenti} , La presenza di incoerenza fornisce la prova della soggettività
 	delle rappresentazioni mentali coinvolte
+	
+	
+	\section{Rappresentation}
+	
+	Le rappresentazioni sono una parte del mondo creato dagli uomini che rappresenta il la mental rappresentation dell'uomo e sono accessibili tramite i 5 sensi. Esempio: un diesgno di una schimmia rappresenta la nostra concezione dei scimmia e lo puoi vedere attraverso gli occhi 
+	
+	\underline{\textit{Inserire immaggine 5.png }}
+	
+	Le rappresentazioni possono essere di 2 tipi :
+	
+	\begin{itemize}
+		\item \textbf{Analogical Representations}: 
+			Raffigurano le \textit{analogic mental rappresentation}. Es : foto, video, audio
+			
+		\item \textbf{Linguistic Representations}: 
+		Desctivono le \textit{analogic mental rappresentation}. Es : testo, documento ,...		
+	\end{itemize}
+
+Naturalmente le Analogical Representations sono innate per natura se vedi un disegno nessuno ti ddeve spiegare cos'è. Mentre le Linguistic Representations sono apprese es: devi prima imparare a leggere 
+\\
+
+Le rappresentazioni sono costruite con l'obiettivo di minimizzare la probabilità di diverse interpretazioni e, quindi, di mental rappresentation.
+
+
+
+\section{World model}
+
+Per rappresentare il mondo in maniera efficace utilizziamo questo set di regole:
+Il world model deve codificare:
+\begin{enumerate}
+	\item Le informazioni codificate nel analogical representations
+	\item Le informazioni codificate nel linguistic representations
+	\item la mappatura fra lingustic e mental rappresentation
+\end{enumerate}
+
+Tutti e tre i componenti sopra menzionati devono essere codificati in modo intuitivo e univoco.
+
+
+In pratica si traduce con :
+
+\begin{itemize}
+	\item Percetti e parole che li concettualizzano (AR -> LR)
+	\item Percetti organizzati in fatti (AR)
+	\item Frasi che li descrivono (LR)
+	\item Frasi mappate in fatti tramite concetti (LR->AR)
+\end{itemize}
+
+
+\subsection{Set teory}
+	per rappresentare il nostro world model usiamo la \textbf{set teory}. Perchè ? rappresentazione non ambigua, formalizza le entità, le loro somiglianze e dissomiglanze ed è universale
+	
+	
+	Ecco come rappresentiamo gli elementi nella set teroy : 
+	
+	\subsection{Precept}
+	Un precetto è qualcosa che viene percepito, ovvero un insieme di proprietà che distinguono un oggetto o un evento da altri. Un percept è ciò che il cervello riconosce come unità separata dal resto, basandosi su una combinazione di proprietà. 
+	
+	
+	\underline{\textit{Non ho capito bene questa parte, bisogna finirla}}
+	
+	
+	\subsection{Facts e Models}
+	Un fatto è una dichiarazione di realtà che coinvolge i percetti, ma che ha anche una componente spazio-temporale. In altre parole, un fatto descrive una situazione concreta che si verifica in un determinato punto nello spazio e nel tempo.
+	Tipi di facts:
+	
+	\begin{itemize}
+		\item \textbf{Spacetime invariant facts}:  Io sono un umano
+		\item \textbf{Time invariant facts}: la terra è nella via lattea
+		\item \textbf{Space invariant facts}: Se vgolio atteraversare l'oceano devo nuotare o volare 
+		\item \textbf{Spacetime variant facts}: Io sono amico con Zeno (ancora per poco però)
+	\end{itemize}
+	
+	I percetti sono le unità di base della percezione (proprietà, entità, relazioni), mentre i fatti sono dichiarazioni che combinano questi percetti con un riferimento specifico a quando e dove accadono
+	
+	
+	\subsection{Model}
+	Un modello \textbf{M} è un insieme di fatti (atomici)
+		\begin{center}
+		$ M = {f} $
+		\end{center}
+	Esempio : \{Sofia is a person, Paolo is a man,Rocky is a dog,
+		Sofia is near Paolo,Sofia has blond hair, Sofia is a friend of Paolo,
+		Rocky is an animal, Rocky is the dog of Sofia, ...\} 
+		
+		
+		Per essere più precisi :
+	
+	\textbf{Definizione (Domain of interpretation).} A Domain (of interpretation) èun insieme di fatti $\{f\}$.
+	
+	\[
+	D = \{f\}
+	\]
+	
+
+	
+	\textbf{Definizione (Model).} Dato un domain $D$, un model $M$ e un sottoinsieme di  $D$.
+	
+	\[
+	M = \{f\} \subseteq D
+	\]
+		
+		
+
+Un domain è l'insieme di tutti i fatti che siamo disposti a considerare. Un model è solo il sottoinsieme di fatti che definiamo come raffiguranti la situazione attuale
+
+Un domain è tutto quello tutto quello che si può potenzialmente percepire \textbf{anche fatti inconsistenti tra loro}. Sono poi i modelli che non devono essere incosistenti. Un dominio è solamente un insieme che ragruppa tutti i fatti . Poi il modello sceglie quali "usare" per la situazione attuale 
+
+
+\underline{\textit{Di nuovo non ho capito bene lo schema qua bisogna riguarfarlo }}
+
+\subsection{Assertions}
+Un'\textbf{asserzione} $a$ è una frase \textbf{atomica}, cioè una frase che non può essere scomposta in frasi più semplici, che descrive in modo univoco un singolo fatto. Es : Mario è un uomo	
+\\
+
+\textbf{Assertional theories} are linguistic descriptions of models\\ \\
+	\textbf{Definizione (Assertional theory).} Un Assertional theory $T_{A}$, è un insieme di asserzioni  
+
+\[
+T_{A} = \{a\} 
+\]
+
+\subsection{Language}
+	Una lingua è qualsiasi notazione
+	(alfabeto + regole di formazione che generano frasi) definita
+	dagli esseri umani, concordata dagli esseri umani, che consente di
+	descrivere rappresentazioni analogiche.
+	
+	
+	\textbf{Definizione  (Assertional language).} Un assertional language $L_A$ è un insieme di aserzioni $\{a\}$.
+	
+	\[
+	L_A = \{a\}
+	\]
+	
+	\vspace{1cm}
+	
+	\textbf{Definizione (Assertional theory).} Data un assertional language $L_A$, un assertional theory $T_A$ è un sottoinsieme di  $L_A$.
+	
+	\[
+	T_A = \{a\} \subseteq L_A
+	\]
 \end{document}
